src/test/ui/pattern/usefulness/unstable-gated-patterns.stderr
error[E0004]: non-exhaustive patterns: `Unstable` not covered
  --> $DIR/unstable-gated-patterns.rs:10:11
   |
LL |     match Foo::Stable {
   |           ^^^^^^^^^^^ pattern `Unstable` not covered
   |
note: `Foo` defined here
  --> $DIR/auxiliary/unstable.rs:11:5
   |
LL | / pub enum Foo {
LL | |     #[stable(feature = "stable_test_feature", since = "1.0.0")]
LL | |     Stable,
LL | |     #[stable(feature = "stable_test_feature", since = "1.0.0")]
...  |
LL | |     Unstable,
   | |     ^^^^^^^^ not covered
LL | | }
   | |_-
   = note: the matched value is of type `Foo`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         Foo::Stable2 => {}
LL +         Unstable => todo!()
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
